--- a/login.html
+++ b/login.html
@@ -124,7 +124,7 @@
 						<hr style="height:2px;">
 					</div>
 				</div>
-				<form name="f1">
+				<form name="f1" method="post">
 					<div class="row mt-2">
 
 
@@ -157,7 +157,7 @@
 						<div class="col-1"></div>
 						<div class="col-10">
 							<button class="btn btn-primary text-center " onclick="return check();"
-								style="width:100%">Login</button>
+								value="submit" style="width:100%">Login</button>
 						</div>
 						<div class="col-1"></div>
 					</div>
