--- a/Register.html
+++ b/Register.html
@@ -140,7 +140,7 @@
 						<hr style="height:2px;">
 					</div>
 				</div>
-				<form name="f1">
+				<form name="f1" method="post">
 					<div class="row my-2">
 						<div class="col mt-1">
 
@@ -193,7 +193,7 @@
 						<div class="col-1"></div>
 						<div class="col-10">
 							<form name="f5"><button class="btn btn-primary text-center " name="sign"
-									onclick="return check();" style="width:100%">Sign Up</button></form>
+									value="submit" onclick="return check();" style="width:100%">Sign Up</button></form>
 						</div>
 						<div class="col-1"></div>
 				</form>
